complex/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: stephengrider/multi-worker
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
