complex/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: multi-client
        image: stephengrider/multi-client
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 1500
    targetPort: 3000
