complex/k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: multi-server
        image: stephengrider/multi-server
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 2500
    targetPort: 5000
